--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,7 +13,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"concurrently\"npm start\" \"npm run front-end\""
   },
   "keywords": [],
   "author": "",
